fix(ui): fix horizontal scroll

--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -1,3 +1,4 @@
 .content-container {
     height: calc(100vh - 60px);
+    overflow: hidden;
 }
